--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriBizz">
+        <activity android:name=".DisplayActivity"></activity>
         <activity android:name=".ExampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,9 +26,8 @@
         <activity android:name=".BuyerProductActivity" />
         <activity android:name=".SupplierProductActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity">
-        </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
