--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".DrawerActivity"
@@ -26,7 +27,9 @@
         <activity android:name=".BuyerProductActivity" />
         <activity android:name=".SupplierProductActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".RegisterActivity">
+
+        </activity>
         <activity android:name=".MainActivity" />
     </application>
 
