--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriBizz">
-        <activity android:name=".ListUsersActivity"></activity>
-        <activity android:name=".DisplayActivity" />
-        <activity android:name=".ExampleActivity">
+        <activity android:name=".ListUsersActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".DisplayActivity" />
+        <activity android:name=".ExampleActivity">
+
         </activity>
         <activity
             android:name=".DrawerActivity"
