--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriBizz">
-        <activity android:name=".ui.RegisterAdapter"></activity>
+        <activity android:name=".ui.AdapterRegister"></activity>
+        <activity android:name=".ui.RegisterAdapter" />
         <activity android:name=".ui.RegisterActivity" />
         <activity android:name=".ListUsersActivity" />
         <activity android:name=".DisplayActivity" />
