--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriBizz">
-        <activity android:name=".RegisterList"></activity>
-        <activity android:name=".ui.AdapterRegister" />
-        <activity android:name=".ui.RegisterAdapter" />
-        <activity android:name=".ui.RegisterActivity" />
+        <activity android:name=".Shared"></activity>
+        <activity android:name=".RegisterList" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".ListUsersActivity" />
         <activity android:name=".DisplayActivity" />
         <activity android:name=".ExampleActivity">
@@ -31,7 +30,6 @@
         <activity android:name=".BuyerProductActivity" />
         <activity android:name=".SupplierProductActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
