--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.agribizz">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,20 +16,35 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgriBizz">
-        <activity android:name=".Shared"></activity>
-        <activity android:name=".RegisterList" />
-        <activity android:name=".RegisterActivity" >
-        </activity>
-        <activity android:name=".ListUsersActivity" />
-        <activity android:name=".DisplayActivity" />
-        <activity android:name=".ExampleActivity">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".SupplierMapsActivity"
+            android:label="@string/title_activity_supplier_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+
+        <activity android:name=".Shared" />
+        <activity android:name=".RegisterList" />
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".ListUsersActivity" />
+        <activity android:name=".DisplayActivity" />
+        <activity android:name=".ExampleActivity" />
         <activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer"
