--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,23 +28,24 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <activity
             android:name=".SupplierMapsActivity"
             android:label="@string/title_activity_supplier_maps">
+        </activity>
+
+        <activity android:name=".Shared" />
+        <activity android:name=".RegisterList" />
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Shared" />
-        <activity android:name=".RegisterList" />
-        <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".ListUsersActivity" />
         <activity android:name=".DisplayActivity" />
-        <activity android:name=".ExampleActivity" />
+        <activity android:name=".ExampleActivity" >
+        </activity>
         <activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer"
