--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.agribizz" >
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    package="com.example.agribizz">
 
     <application
         android:allowBackup="true"
@@ -10,7 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AgriBizz" >
+        android:theme="@style/Theme.AgriBizz">
+        <activity
+            android:name=".BuyerDashboardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SupplierDashboardActivity"
+            android:exported="true" />
         <activity
             android:name=".SupplierList"
             android:exported="true" />
@@ -29,7 +36,7 @@
             android:label="@string/title_activity_supplier_maps" />
         <activity android:name=".Shared" />
         <activity android:name=".RegisterList" />
-        <activity android:name=".RegisterActivity" >
+        <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,7 +49,7 @@
         <activity
             android:name=".DrawerActivity"
             android:label="@string/title_activity_drawer"
-            android:theme="@style/Theme.AgriBizz.NoActionBar" >
+            android:theme="@style/Theme.AgriBizz.NoActionBar">
             >
         </activity>
         <activity android:name=".SupplierProductActivity" />
@@ -53,5 +60,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
